--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:12
 
-WORKDIR /app
+WORKDIR usr/src/app
 
 COPY package*.json ./
 
@@ -8,5 +8,5 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 9000
+EXPOSE 8080
 CMD [ "node", "index.js" ]
